--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/01-Introduction-to-Problem-Solving.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/01-Introduction-to-Problem-Solving.mdx
@@ -150,16 +150,16 @@ Here are some interesting videos that can help you post-class to dive deeper int
 Answer the following questions to revise and get a better understanding of how well you understood the concepts in this lesson. Note that some of the questions may not be taught in this lesson so learn and explore by using search engines and reading more. Good luck!
 
 
-1.  What is the correct way of solving problems?
+Q1.  What is the correct way of solving problems?
     
 
-1.  Solve the problem in any order you want
+A.  Solve the problem in any order you want
     
-2.  Follow a proper plan and efficient algorithm
+B.  Follow a proper plan and efficient algorithm
     
-3.  Start solving the problem from the last
+C.  Start solving the problem from the last
     
-4.  None of the above
+D.  None of the above
     
 
 Ans: B. Follow a proper plan and efficient algorithm
@@ -168,17 +168,17 @@ LU measured: Problem solving
 
   
 
-2. What does a programmer need to be?
+Q2. What does a programmer need to be?
 
   
 
-1.  Creative and innovative
+A.  Creative and innovative
     
-2.  Hardworking but not creative
+B.  Hardworking but not creative
     
-3.  Lazy and repetitive
+C.  Lazy and repetitive
     
-4.  None of these
+D.  None of these
     
 
 Ans: A. Creative and innovative
@@ -187,15 +187,15 @@ LU measured: Problem solving
 
   
 
-3. Which of the following is the 3rd step in Problem solving?
+Q3. Which of the following is the 3rd step in Problem solving?
 
-1.  Define the problem
+A.  Define the problem
     
-2.  Evaluate the outcome
+B.  Evaluate the outcome
     
-3.  Implement the solution
+C.  Implement the solution
     
-4.  Develop the alternative solutions
+D.  Develop the alternative solutions
     
 
 Ans: D. Develop the alternative solutions
@@ -204,15 +204,15 @@ LU measured: Problem solving
 
   
 
-4. Which of the following techniques is used to determine the root cause of a problem?
+Q4. Which of the following techniques is used to determine the root cause of a problem?
 
-1.  Diagnose the problem
+A.  Diagnose the problem
     
-2.  Fishbone diagram
+B.  Fishbone diagram
     
-3.  Gantt chart
+C.  Gantt chart
     
-4.  Background check
+D.  Background check
     
 
 Ans: B.Fishbone diagram
@@ -221,17 +221,17 @@ LU measured: Problem solving
 
   
 
-5. Which job does not require programming?
+Q5. Which job does not require programming?
 
   
 
-1.  Weather forecast
+A.  Weather forecast
     
-2.  Trading with crypto ad stocks
+B.  Trading with crypto ad stocks
     
-3.  Labour work
+C.  Labour work
     
-4.  Self Driving vehicles
+D.  Self Driving vehicles
     
 
 
