--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/01-Introduction-to-Problem-Solving.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/01-Introduction-to-Problem-Solving.mdx
@@ -10,6 +10,38 @@ In this lesson you will learn how Programming is primarily a problem-solving ski
 ## Why is Problem solving important?
 
 You probably ask yourself this question everyday, “Why is this important and why am I doing this?” So, let’s see why problem solving is so important in our lives. Solving problems means making choices. Typically, effective problem-solving skills result in **“happier, more confident, and more independent”** individuals. This skill builds confidence in you and helps you make better decisions.
+## What can you expect from this course?
+
+You will find back to back problems to solve, that will help you get into the mode of Problem solving.
+
+## What’s unique about Kalvi’s course?
+
+Usually programming courses deals with teaching you the syntax and formats to learn a Programming Language. But this course is a blend of Problem solving with Programming where through programs you get to solve problems. And the most unique thing about this course is you will learn 2 Programming languages (the most in-demand) parallely. Yes, you heard it right!! You will learn **C++ and Python** in all the lessons.
+
+## About this course
+
+You should know how this course is split across weeks to plan your learning better.
+
+  
+
+**No. of hours dedicated for this course per week:** 8 hours
+
+**Course duration in weeks:** 16 weeks course
+
+**Course duration in hours:** 128 weeks course
+
+**No. of modules in the course:** 4 modules
+
+**Continuous Assessment:** Once in 3 weeks
+
+  
+  
+  
+  
+  
+<iframe src="https://giphy.com/embed/4QFcVnf41d2Lb5I0MK" width="480" height="400" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/tvland-tv-land-the-goldbergs-thegoldbergs-4QFcVnf41d2Lb5I0MK"></a></p>
+
+
 ## Reading content on the topic
 
 You are here because **engineering** is your career choice, you must question yourself why the world needs engineers. 
