--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/03-Thinking-with-numbers-part2.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/03-Thinking-with-numbers-part2.mdx
@@ -4,6 +4,8 @@
 
 We already covered 3 different types of puzzles in the previous lesson of thinking with numbers. This lesson will be the continuation of the previous lecture and we will discuss some more puzzles in this lecture. So, this will also be a fun lesson like the previous one.
 
+## Numbers are crazy and did you hear them talk…? :wink:
+
 ## Takeaways from the previous lesson
 
 The most important takeaways from the previous lesson were:
