--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/01-Introduction-to-Problem-Solving.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/01-Introduction-to-Problem-Solving.mdx
@@ -10,6 +10,36 @@ In this lesson you will learn how Programming is primarily a problem-solving ski
 ## Why is Problem solving important?
 
 You probably ask yourself this question everyday, “Why is this important and why am I doing this?” So, let’s see why problem solving is so important in our lives. Solving problems means making choices. Typically, effective problem-solving skills result in **“happier, more confident, and more independent”** individuals. This skill builds confidence in you and helps you make better decisions.
+## What can you expect from this course?
+
+You will find back to back problems to solve, that will help you get into the mode of Problem solving.
+
+## What’s unique about Kalvi’s course?
+
+Usually programming courses deals with teaching you the syntax and formats to learn a Programming Language. But this course is a blend of Problem solving with Programming where through programs you get to solve problems. And the most unique thing about this course is you will learn 2 Programming languages (the most in-demand) parallely. Yes, you heard it right!! You will learn **C++ and Python** in all the lessons.
+
+## About this course
+
+You should know how this course is split across weeks to plan your learning better.
+
+  
+
+**No. of hours dedicated for this course per week:** 8 hours
+
+**Course duration in weeks:** 16 weeks course
+
+**Course duration in hours:** 128 weeks course
+
+**No. of modules in the course:** 4 modules
+
+**Continuous Assessment:** Once in 3 weeks
+
+  
+  
+![](https://media0.giphy.com/media/4QFcVnf41d2Lb5I0MK/giphy.gif?cid=790b7611a31744da21b1718eda3274c21c9e30376b82789e&rid=giphy.gif&ct=g)  
+
+
+
 ## Reading content on the topic
 
 You are here because **engineering** is your career choice, you must question yourself why the world needs engineers. 
@@ -43,7 +73,7 @@ Now let’s get on with looking at the various steps involved in solving a probl
 
   
 
-### Steps in Problem Solving
+## Steps in Problem Solving
 
 **1. Define the problem**
 The first step in solving a problem is to actually understand the problem and specifically identify the situation & circumstances that make it a problem. You have to evaluate various characteristics of the problem at hand. This process works in the following manner
