--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/01-Introduction-to-Problem-Solving.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/01-Introduction-to-Problem-Solving.mdx
@@ -73,7 +73,7 @@ Now let’s get on with looking at the various steps involved in solving a probl
 
   
 
-## Steps in Problem Solving
+### Steps in Problem Solving
 
 **1. Define the problem**
 The first step in solving a problem is to actually understand the problem and specifically identify the situation & circumstances that make it a problem. You have to evaluate various characteristics of the problem at hand. This process works in the following manner
