--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/03-Thinking-with-numbers-part2.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/03-Thinking-with-numbers-part2.mdx
@@ -4,6 +4,11 @@
 
 We already covered 3 different types of puzzles in the previous lesson of thinking with numbers. This lesson will be the continuation of the previous lecture and we will discuss some more puzzles in this lecture. So, this will also be a fun lesson like the previous one.
 
+## Numbers are crazy and did you hear them talk…? :wink:
+
+![](https://lh6.googleusercontent.com/JXEjKK0UvNk4YAVYQJB2m3pjtMwgEG94fLUvrAak2VWp7z9QW8Yb8UKziviwHt8099XLzmPqhMIOB0EtRbCzuMNM5K-5p336srv6dH-GtWh-EhyHsr2m-01cG3hDNk6Vrx4BEokaRboQj4wHWPQOeQ)
+
+
 ## Takeaways from the previous lesson
 
 The most important takeaways from the previous lesson were:
@@ -95,17 +100,29 @@ Some important factors that can be applied in these problems (not specific to th
 
 > Let’s discuss the sample problem we have taken, we can see that we have to use all the six digits provided to solve the problem. Then, we can try to brainstorm some combinations, since the RHS will of course be the largest term of the three. I put a 9 there just to observe other possibilities. Then, we can try using the other digits as the second digit with 9 in RHS. First, we try to put 0 with 9 to get 90. Now, check if we can form 90 with 2 numbers made from the digits 1, 2, 7, 8.
 
+> _Step 1:_ We can see that we have to use all the six digits provided to solve the problem. Then, we can try to brainstorm some combinations.
+
+> _Step 2:_ Since the RHS will of course be the largest term of the three, I put a 9 there just to observe other possibilities. Then, we can try using the other digits as the second digit with 9 in RHS.
+  
+> _Step 3:_ First, we try to put 0 with 9 to get 90. Now, check if we can form 90 with 2 numbers made from the digits 1, 2, 7, 8.
+
 If you observe closely, you can see a possibility….
 
-Yes, we can use 78 and 12, and 78 + 12 = 90
+Yes, you are correct we can use 78 and 12, and 78 + 12 = 90
 
-So, our problem is solved.
-
+Thus, our problem is solved.
   
 
 **Note:** This problem has one other solution as well, try finding it.
 
-(Hint: This time start with 8 as tens digit in RHS)
+<details>
+  <summary>Check the Hint!</summary>
+  
+ This time start with 8 as tens digit in RHS
+  
+</details>
+
+
 
   
 
@@ -414,7 +431,10 @@ Solve this Kakuro puzzle:
   
   
   
-  
+Now, it’s time to say “Good-bye”
+
+![image](https://media1.giphy.com/media/TFYyfFrqxuExEM5r04/giphy.gif?cid=790b76110e3719b79ccfb3dbb453f57b79a488c82d5102fe&rid=giphy.gif&ct=g)
+
   
   
   
