--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/01-Introduction-to-Problem-Solving.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/01-Introduction-to-Problem-Solving.mdx
@@ -38,6 +38,7 @@ You should know how this course is split across weeks to plan your learning bett
   
 ![](https://media0.giphy.com/media/4QFcVnf41d2Lb5I0MK/giphy.gif?cid=790b7611a31744da21b1718eda3274c21c9e30376b82789e&rid=giphy.gif&ct=g)  
 
+Source: [Giphy](https://giphy.com/gifs/tvland-tv-land-the-goldbergs-thegoldbergs-4QFcVnf41d2Lb5I0MK)
 
 
 ## Reading content on the topic
