--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/02-Thinking-with-numbers.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/02-Thinking-with-numbers.mdx
@@ -369,3 +369,8 @@ Ans: Option B
 
 LU Measured: Problem solving
 
+And if you think we are done with Numbers, here is what we wanted to say. 
+ 
+![](https://media4.giphy.com/media/3ohzAkPDu0uTEPBKqQ/giphy.gif?cid=ecf05e47z6iz9es9rzide5xlyt0fkj2glmhpo588r9j5373v&rid=giphy.gif&ct=g)
+
+Source: [Giphy](https://giphy.com/gifs/spongebob-season-4-spongebob-squarepants-3ohzAkPDu0uTEPBKqQ?utm_source=media-link&utm_medium=landing&utm_campaign=Media%20Links&utm_term=)
