--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/02-Thinking-with-numbers.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/02-Thinking-with-numbers.mdx
@@ -262,9 +262,10 @@ These puzzles will help us in making **decisions in a constrained manner** which
 
   
 
->_Step 2:_ Now, we just have to consider the possible combinations of numbers that can work by keeping the constraints in mind. For example, in the top left most cage, we have 1-, the possible combinations that can achieve this result are 1,2(X); 2,1; 2,3(X); 3,4; 4,3(X). The combinations marked with X are not possible due to the constraints we obtained by filling the initial unit cells.
+>_Step 2:_ Now, we just have to consider the possible combinations of numbers that can work by keeping the constraints in mind. For example, in the top left most cage, we have 1-, the possible combinations that can achieve this result are 1,2(X); 2,1; 2,3(X); 3,4; 4,3(X). The combinations marked with X are not possible due to the constraints we obtained by filling the initial unit cells.1,2 → 1 is already in the first column 2,3 & 4,3 → 3 is already in the second column
 
->_Step 3:_ We can see that we’re left with two possible combinations 2,1 and 3,4. Now, again we take 3,4 and fill the box, we see that we are only left with 2 and 4 for the first row. 
+
+>_Step 3:_ We can see that we’re left with two possible combinations 2,1 and 3,4. Now, again we take 3,4 and fill the box, we see that we are only left with 2 and 4 for the first column. 
 
 >_Step 4:_ This is a problem, because we have to fill the middle-left cage with 1- which is not possible with 2 and 4. Hence, we have reached the only possible combination for the top-left cage i.e. 2,1. Similarly, we can use the already filled cells to fill the cells that are empty. Remember, **the process of elimination of possibilities** is the key here.
 
