--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/03-Thinking-with-numbers-part2.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/03-Thinking-with-numbers-part2.mdx
@@ -4,7 +4,7 @@
 
 We already covered 3 different types of puzzles in the previous lesson of thinking with numbers. This lesson will be the continuation of the previous lecture and we will discuss some more puzzles in this lecture. So, this will also be a fun lesson like the previous one.
 
-## Numbers are crazy and did you hear them talk…? :wink:
+**Numbers are crazy and did you hear them talk…?** :wink:
 
 ![](https://lh6.googleusercontent.com/JXEjKK0UvNk4YAVYQJB2m3pjtMwgEG94fLUvrAak2VWp7z9QW8Yb8UKziviwHt8099XLzmPqhMIOB0EtRbCzuMNM5K-5p336srv6dH-GtWh-EhyHsr2m-01cG3hDNk6Vrx4BEokaRboQj4wHWPQOeQ)
 
@@ -429,7 +429,7 @@ Solve this Kakuro puzzle:
 
 ![image](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/image12.png)
   
-  
+[Check the solution!](https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/problem-solving/PS0002A.png)  
   
 Now, it’s time to say “Good-bye”
 
